[telenot] changes for PR #82
Signed-off-by: Ronny Grun <ronny.grun@t-online.de>